--- a/css/main.css
+++ b/css/main.css
@@ -41,7 +41,7 @@ img {
     background-color: #e0e9ec;
     border-radius: 0.7vh;
     /*cursor: cell;*/
-    cursor: url("../img/icons/pen.png"), auto;
+    cursor: crosshair;
     padding: 1vh;
     height: 70vh;
     width: 99vh;
