--- a/css/main.css
+++ b/css/main.css
@@ -47,12 +47,19 @@ img {
     margin-top: 10vh;
     justify-content: center;
     align-items: center;
+    /* position: relative; */
+}
+
+.output-img {
+    position: relative;
+    border: 4px solid red;
+
 }
 
 .tool-box {
     background-color: #eeeeee;
     margin-top: 10vh;
-    position: static;
+    position: relative;
 }
 
 .tool-box a, .jscolor {
@@ -77,6 +84,12 @@ img {
 
 .material-icons {
     font-size: 4.1vh;
+}
+
+.crop-area {
+    border: 2px solid black;
+    position: absolute;
+    /* z-index: 999; */
 }
 
 /*SOMETHING LIKE THIS*/
