--- a/css/main.css
+++ b/css/main.css
@@ -52,8 +52,7 @@ img {
 
 .output-img {
     position: relative;
-    border: 4px solid red;
-
+    border: 2px solid red;
 }
 
 .tool-box {
@@ -64,7 +63,7 @@ img {
 
 .tool-box a, .jscolor {
     margin-top: .9vh;
-    padding: 0.5vh;
+    padding: 0.6vh;
 }
 
 .input-file {
@@ -75,7 +74,7 @@ img {
     cursor: pointer;
 }
 
-.jscolor{
+.jscolor {
     text-indent: 100%;
     white-space: nowrap;
     overflow: hidden;
@@ -83,13 +82,14 @@ img {
 }
 
 .material-icons {
-    font-size: 4.1vh;
+    font-size: 4vh;
 }
 
 .crop-area {
     border: 2px solid black;
     position: absolute;
-    /* z-index: 999; */
+    z-index: 999;
+    
 }
 
 /*SOMETHING LIKE THIS*/
