commiting 'cause i want to checkout to other branch

--- a/css/main.css
+++ b/css/main.css
@@ -85,6 +85,13 @@ img {
     height:4vh;
     margin-left:1vh;
 }
+
+i{
+	vertical-align:middle;
+	position: relative;
+	left: -0.8vh;
+}
+
 /*SOMETHING LIKE THIS*/
 /* table tr:nth-child(odd) td:nth-child(even) {
   background: #000;
